[tool.poetry]
name = "common_lib"
version = "0.1.0"
description = ""
authors = ["manohar <manohar.sompalli@philips.com>"]

[tool.poetry.dependencies]
python = "=3.6.8"
flask-restx = "0.5.0"
Flask = "2.0.1"

[tool.poetry.dev-dependencies]
mypy = "0.910"
pylint = "2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
